--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1344,3 +1344,110 @@ button.pagination-btn:hover {
   height: 30px;
   margin-right: 5px;
 }
+
+/* --------- */
+
+.btn-success {
+  background-color: #053ba0 !important;
+  color: #fff;
+}
+
+.btn-danger {
+  border-color: #FF2829 !important;
+  background-color: #FF5B5C !important;
+  color: #FFF;
+}
+
+.form-submit {
+  padding: 13px 30px;
+  font-size: 15px;
+  letter-spacing: 0.3px;
+  font-weight: 400;
+}
+
+.card-header-flex {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.prdct-qty-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.qty-input-box {
+  max-width: 70px;
+  padding: 0px 5px;
+  min-height: 40px;
+  border-radius: 4px;
+  text-align: center;
+  display: inline-block;
+  margin: 0px 5px;
+  color: #475F7B;
+  background-color: #FFF;
+  border: 1px solid #DFE3E7;
+  transition: 0.3s;
+}
+
+.qty-input-box:focus {
+  color: #475F7B;
+  background-color: #FFF;
+  border-color: #5A8DEE;
+  outline: 0;
+  box-shadow: 0 3px 8px 0 rgb(0 0 0 / 10%);
+}
+
+.prdct-qty-btn {
+  border: none;
+  border-radius: 4px;
+  background-color: #5a8dee2e;
+  color: #5a8dee;
+  font-size: 11px;
+  transition: 0.3s;
+}
+
+.prdct-qty-btn:hover {
+  background-color: #5a8dee;
+  color: #fff;
+}
+
+.product-img img {
+  width: 50px;
+  height: 50px;
+  border-radius: 4px;
+}
+
+.card-header-flex {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.prdct-delete {
+  border: none;
+  border-radius: 4px;
+  background-color: #fde6e7;
+  color: #ff5b5c;
+  transition: 0.3s;
+}
+
+.prdct-delete svg {
+  font-size: 25px;
+}
+
+.prdct-delete:hover {
+  background-color: #ff5b5c;
+  color: #fff;
+}
+
+.text-right2 {
+  font-size: 20px;
+  font-family: monospace;
+  color: #2f6fe5;
+}
+
+.text-left {
+  color: rgb(6, 100, 89);
+}
