--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1451,3 +1451,194 @@ button.pagination-btn:hover {
 .text-left {
   color: rgb(6, 100, 89);
 }
+
+
+/*  */
+.text-center {
+  text-align: center;
+}
+
+.svg-icon {
+  color: green;
+  font-size: 100px;
+}
+
+.svg-icon1 {
+  color: red;
+  font-size: 100px;
+}
+
+.payment {
+  color: green;
+}
+
+.payment1 {
+  color: red;
+}
+
+.cancel {
+  margin-top: 10px;
+}
+
+/* MyOrders Page CSS */
+
+.order {
+  text-align: center;
+  margin-bottom: 10px;
+  font-size: 40px;
+  font-family: 'Courier New', Courier, monospace;
+}
+
+.section1 {
+  padding-top: 30px;
+}
+
+.container1 {
+  /* padding-top: 150px; */
+  width: 40%;
+  margin: auto;
+  border: 1px solid rgb(56, 55, 55);
+  border-radius: 5%;
+  margin-bottom: 20px;
+}
+
+/* .row {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
+} */
+
+.card-header {
+  padding: 10px;
+}
+
+.details {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 15px;
+  margin-bottom: 25px;
+}
+
+.card-body {
+  padding: 20px;
+}
+
+.gradient-custom-2 {
+  background: #333;
+}
+
+.img-product {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+}
+
+.img-product1 {
+  width: 130px;
+  height: 120px;
+  border-radius: 4px;
+  margin-bottom: 70px;
+
+}
+
+#progressbar-1 {
+  color: #455A64;
+  gap: inherit;
+}
+
+#progressbar-1 li {
+  list-style-type: none;
+  margin-top: 20px;
+  font-size: 13px;
+  color: #ffffff;
+  text-align: center;
+  width: 33.33%;
+  float: left;
+  position: relative;
+}
+
+.step {
+  margin-top: 30px;
+  padding-bottom: 20px;
+}
+
+#progressbar-1 #step1:before {
+  content: "1";
+  color: #fff;
+  width: 29px;
+  text-align: center;
+}
+
+#progressbar-1 #step2:before {
+  content: "2";
+  color: #fff;
+  width: 29px;
+  text-align: center;
+
+}
+
+#progressbar-1 #step3:before {
+  content: "3";
+  color: #fff;
+  width: 29px;
+  text-align: center;
+}
+
+#progressbar-1 #step4:before {
+  content: "4";
+  color: #fff;
+  width: 29px;
+  margin-right: 30px;
+  text-align: center;
+}
+
+#progressbar-1 li:before {
+  line-height: 29px;
+  display: block;
+  font-size: 12px;
+  background: #455A64;
+  border-radius: 50%;
+  margin: auto;
+}
+
+#progressbar-1 li:after {
+  content: '';
+  width: 121%;
+  height: 2px;
+  background: #455A64;
+  position: absolute;
+  left: 0%;
+  right: 0%;
+  top: 15px;
+  z-index: -1;
+}
+
+#progressbar-1 li:nth-child(2):after {
+  left: 50%;
+}
+
+#progressbar-1 li:nth-child(1):after {
+  left: 35%;
+  width: 121%
+}
+
+#progressbar-1 li:nth-child(3):after {
+  left: 30%;
+  width: 100%;
+}
+
+#progressbar-1 li:nth-child(4):after {
+  left: 0%;
+  width: 50%;
+}
+
+#progressbar-1 li.active:before,
+#progressbar-1 li.active:after {
+  background: #1266f1;
+}
+
+.card-stepper {
+  z-index: 0
+}
